tp/kubernetes/dev/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  namespace: gp-dev
  labels:
    app: php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: ghcr.io/zouitni-yassine/gestion-produits-php:tp
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/uploads
          readinessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests: { cpu: "50m",  memory: "128Mi" }
            limits:   { cpu: "500m", memory: "512Mi" }
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: php-uploads
---
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: gp-dev
spec:
  selector:
    app: php
  ports:
    - port: 80
      targetPort: 80
