tp/kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gp-dev
  namespace: gp-dev
spec:
  ingressClassName: traefik
  rules:
    - host: dev-k8s.gestion-produits.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php
                port:
                  number: 80
